fix width to remove the bottom scrollbar

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,7 +21,10 @@
 }
 html {
   scroll-behavior: smooth;
+  max-width: 100%;
+  overflow-x: hidden;
 }
+
 .backgroundGrid {
   width: 100%;
   height: 100%;
